<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textColor="@color/third"
            android:textSize="28sp"
             />


        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_at"
            android:drawablePadding="10dp"
            android:hint="name"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:hint="@string/email_id"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/birthdateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="10dp"
            android:hint="@string/birth"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/contactET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="10dp"
            android:hint="@string/number"
            android:padding="10dp"
            android:textSize="16sp" />

        <!-- <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/third"
            android:text="Register"
            android:textColor="@color/white" />
         -->
        <LinearLayout
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rectangle_box"
            android:onClick="onLoginClicked"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/circularProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            />


    </LinearLayout>




</RelativeLayout>
